--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "typescript": "^4.3.5",
     "wait-port": "^0.2.9"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "volta": {
+    "node": "14.17.4"
+  }
 }
