--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: test
         run: |
-          wget https://storage.googleapis.com/flow-cli/install.sh
-          sh ./install.sh
+          sh -ci "$(curl -fsSL https://storage.googleapis.com/flow-cli/install.sh)" -- v0.28.3
           npm i
           npm test
         env:
