--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   "homepage": "https://github.com/mediadotech/smart-contracts#readme",
   "private": true,
   "devDependencies": {
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.0.0",
     "elliptic": "^6.5.4",
-    "jest": "^27.0.6",
+    "jest": "^27.4.0",
+    "jest-extended": "^1.2.0",
     "sha3": "^2.1.4",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.3.5",
     "wait-port": "^0.2.9"
   },
